feat: Enhance payment service tests and add new features
- Added a test for legacy payment success logging in PersistenceAndConstraintTest.
- Updated application-test.properties to change the database URL for tests.
- Introduced login redirect utility to handle post-login navigation based on user roles.
- Created tests for login redirect utility to ensure correct navigation paths.
- Implemented TicketQrCode component to display QR codes for tickets with error handling.
- Added tests for BookingSuccessPage to verify successful booking receipt rendering.
- Created AdminPaymentDetailPage tests to handle read failures gracefully.
- Added tests for scoreAdminService to ensure correct mapping of backend data to dashboard view model.
- Documented client runtime readiness and audit findings in markdown files.
- Created operational runbooks for admin, staff, and customer roles to guide usage.
- Registered functional defects and UI/UX gaps for future remediation.
- Implemented AccessibleSeatPricing utility to determine seat pricing based on type.